--- a/DEMO_GIT/process/TestGit_0.1.properties
+++ b/DEMO_GIT/process/TestGit_0.1.properties
@@ -7,9 +7,11 @@
     <additionalProperties xmi:id="__5eEsqaVEeuVM8lSc9KhBw" key="created_date" value="2021-04-26T15:47:53.339+0200"/>
     <additionalProperties xmi:id="__5eEs6aVEeuVM8lSc9KhBw" key="modified_product_fullname" value="Talend Open Studio for Data Integration"/>
     <additionalProperties xmi:id="__5eEtKaVEeuVM8lSc9KhBw" key="modified_product_version" value="6.5.1.20180116_1512"/>
-    <additionalProperties xmi:id="__5eEtaaVEeuVM8lSc9KhBw" key="modified_date" value="2021-04-26T15:54:32.265+0200"/>
+    <additionalProperties xmi:id="__5eEtaaVEeuVM8lSc9KhBw" key="modified_date" value="2021-04-26T16:20:06.230+0200"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="__5aaUaaVEeuVM8lSc9KhBw" path=""/>
+  <TalendProperties:ItemState xmi:id="__5aaUaaVEeuVM8lSc9KhBw" path="" locked="true" lockDate="2021-04-26T16:13:20.685+0200">
+    <locker href="../talend.project#_un9goKaVEeuVM8lSc9KhBw"/>
+  </TalendProperties:ItemState>
   <TalendProperties:ProcessItem xmi:id="__5aaUqaVEeuVM8lSc9KhBw" property="__5aaUKaVEeuVM8lSc9KhBw" state="__5aaUaaVEeuVM8lSc9KhBw">
     <process href="TestGit_0.1.item#/"/>
   </TalendProperties:ProcessItem>
